jena-shex/src/test/files/spec/negativeSyntax/base-no-uri.shex
# @base without URI.
# source: TurtleTests/turtle-syntax-bad-base-01.ttl
BASE 
